--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="cources">
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-1.png" alt="">
+                        <img src="images/courses/course-1.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="cource-title"> React - The Complete <br>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-2.png" alt="">
+                        <img src="images/courses/course-2.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="cource-title"> Powerpoint 2020 <br>
@@ -172,7 +172,7 @@
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-3.png" alt="">
+                        <img src="images/courses/course-3.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="cource-title">The Complete JavaScript <br>
